...
    <!-- QR camera reader -->
    <plurals name="transaction_details_activity_total_transactions">
        <item quantity="one">%1$s transaction</item>
        <item quantity="other">%1$s transactions</item>
    </plurals>
...
    <string name="assets_fragment_xml_send_button">Send</string>
    <string name="assets_fragment_error_toast">There was an error!</string>
    <string name="assets_fragment_xml_warning_back_up_message">Remember to backup your wallet</string>
    <string name="assets_fragment_warning_sign_close_button_content_description">Warning sign close button</string>

...
    <string name="settings_fragment_xml_wallet_options_title">Wallet Options</string>
    <string name="settings_fragment_xml_backup_wallet">Backup Wallet</string>
    <string name="settings_fragment_xml_change_pin">Change Pin</string>
    <string name="settings_fragment_xml_report_an_issue">Report an issue</string>
    <string name="settings_fragment_xml_use_biometrics">Use Biometrics</string>
    <string name="settings_fragment_xml_authenticate_on_launch">Authenticate on launch</string>
    <string name="settings_fragment_xml_delete_wallet">Delete Wallet</string>
    <string name="settings_fragment_xml_security_title">Security</string>
    <string name="settings_fragment_xml_network_title">Network</string>
    <string name="settings_fragment_xml_help_title">Need Help?</string>
    <string name="settings_fragment_xml_information">Information</string>
    <string name="settings_fragment_change_pin_success_snackbar">Pin successfully changed</string>
    <string name="settings_fragment_change_backup_and_security_success_snackbar">Wallet backed up and security enabled successfully</string>

...
    <string name="payment_summary_fragment_note_label_xml">Note:</string>
    <string name="payment_summary_fragment_fee_label_xml">Fee:</string>
    <string name="payment_summary_fragment_xrd_fee">$0.001</string>
    <string name="payment_summary_fragment_confirm_and_send_xml_button">Confirm and Send</string>

...
    <string name="setup_pin_dialog_enter_pin">Enter Pin to Confirm</string>
    <string name="setup_pin_dialog_content_description_back_button">Closes the pin dialog</string>
    <string name="setup_pin_dialog_set_pin_header">Create a pin</string>
    <string name="setup_pin_dialog_confirm_pin_header">Confirm your pin</string>
    <string name="setup_pin_dialog_pin_does_not_match">Pin does not match. Try again!</string>

    <!-- Setup Pin Dialog -->
    <string name="change_pin_dialog_enter_current_pin_header">Enter current pin</string>
    <string name="change_pin_dialog_new_pin_header">Create new pin</string>
    <string name="change_pin_dialog_confirm_pin_header">Confirm new pin</string>
    <string name="change_pin_dialog_content_description_back_button">Closes the pin dialog</string>
    <string name="change_pin_dialog_pin_does_not_match">Pin does not match. Try again!</string>
...

    <!-- Payment Biometrics Dialog -->
    <string name="payment_biometrics_dialog_xml_text_view">Authenticate to pay</string>
    <string name="payment_biometrics_dialog_content_description_biometrics_icon">Biometrics icon</string>
    <string name="payment_biometrics_dialog_xml_cancel_button">Cancel</string>
...

    <!-- Delete Wallet Dialog -->
    <string name="delete_wallet_dialog_xml_title_text_view">Are you sure you want to\n delete your wallet?</string>
    <string name="delete_wallet_dialog_content_description_delete_icon">Delete wallet icon</string>
    <string name="delete_wallet_dialog_xml_cancel_button">Cancel</string>
...

    <!-- Create Wallet Fragment -->
    <string name="create_wallet_fragment_welcome_title_xml">Welcome to Radix App!</string>
    <string name="create_wallet_fragment_message_xml">To continue, you will need access to a digital wallet to send &amp; receive funds.\n\nPlease import an existing wallet or create a new one.</string>
    <string name="create_wallet_fragment_new_wallet_button_xml">Create a new wallet</string>
...
    <!-- Backup Wallet Fragment -->
    <string name="backup_wallet_fragment_toolbar_title">Backup</string>
    <string name="backup_wallet_fragment_welcome_title_xml">Backup your Radix Account</string>
    <string name="backup_wallet_fragment_message_xml">With your back up phrase,\nyou\'re able to restore your wallet.</string>
    <string name="backup_wallet_fragment_mnemonic_error">Invalid mnemonic</string>
...
    <!-- Confirm Backup Wallet Fragment -->
    <string name="confirm_backup_wallet_fragment_toolbar_title">Confirm Backup</string>
    <string name="confirm_backup_wallet_fragment_title_xml">Confirm backed up correctly</string>
    <string name="confirm_backup_wallet_fragment_message_xml">Select the 12 word mnemonic in the correct order.</string>
    <string name="confirm_backup_wallet_fragment_mnemonic_error">Mnemonic does not match! Please select in the correct order</string>
...
