...
                    android:text="@string/settings_fragment_xml_security_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:fontFamily="@font/roboto_medium_radix" />

                <TextView
                    android:id="@+id/settingsBackupWalletTextView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/white_background_ripple"
                    android:drawableEnd="@drawable/ic_icon_arrow_line_green"
                    android:gravity="center_vertical"
                    android:onClick="@{ () -> viewmodel.backupWalletClickListener() }"
...
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#ff9b9b9b"
                    android:visibility="@{ viewmodel.pinSet ? View.VISIBLE : View.GONE }" />

                <TextView
                    android:id="@+id/settingsChangePinTextView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/white_background_ripple"
                    android:drawableEnd="@drawable/ic_icon_arrow_line_green"
                    android:gravity="center_vertical"
                    android:onClick="@{ () -> viewmodel.changePinClickListener() }"
...
                        android:paddingRight="16dp"
                        android:text="@string/settings_fragment_xml_use_biometrics"
                        android:textColor="@color/radixBlueGrey2"
                        android:textSize="17sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/settingsUseBiometricsSwitch"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="0.80"
                        android:checked="@{ viewmodel.useBiometrics }"
                        android:onCheckedChanged="@{(switch, checked) -> viewmodel.useBiometricsCheckedListener(checked)}"
                        android:paddingStart="16dp"
...
                    android:text="@string/settings_fragment_xml_information"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:fontFamily="@font/roboto_medium_radix" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/settingsReportAnIssueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/white_background_ripple"
                    android:gravity="center_vertical"
                    android:onClick="@{ () -> viewmodel.reportAnIssueClickListener() }"
                    android:paddingLeft="16dp"
...
                    android:layout_height="0.5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#ff9b9b9b" />

                <TextView
                    android:id="@+id/settingsDeleteWalletTextView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/white_background_ripple"
                    android:gravity="center_vertical"
                    android:onClick="@{ () -> viewmodel.deleteWalletClickListener() }"
                    android:paddingLeft="16dp"
...
