...
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/backup_wallet_fragment_message_xml"
                    android:textColor="@color/radixBlueGrey2"
                    android:textSize="18sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintEnd_toStartOf="@+id/backupWalletCopyImageButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backupWalletWelcomeTitleTextView" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/backupWalletCopyImageButton"
                    android:layout_width="42dp"
...
                        android:inputType="text"
                        android:textIsSelectable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:longClickable="false"
                        tools:text="two"
                        app:mnemonicWord="@{ viewmodel.mnemonicArray }" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/backupWalletMnemonicThreeTIL"
                    style="@style/MaterialTextLayoutOutlinedStylePrimary"
...
                        android:inputType="text"
                        android:textIsSelectable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:longClickable="false"
                        tools:text="three"
                        app:mnemonicWord="@{ viewmodel.mnemonicArray }" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/backupWalletMnemonicFourTIL"
                    style="@style/MaterialTextLayoutOutlinedStylePrimary"
...
                        android:inputType="text"
                        android:textIsSelectable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:clickable="false"
                        android:longClickable="false"
                        tools:text="four"
                        app:mnemonicWord="@{ viewmodel.mnemonicArray }" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/backupWalletMnemonicFiveTIL"
                    style="@style/MaterialTextLayoutOutlinedStylePrimary"
...
                        android:longClickable="false"
                        tools:text="twelve"
                        app:mnemonicWord="@{ viewmodel.mnemonicArray }" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backupWalletNextButton"
                    style="@style/MaterialButton"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
...
