...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/greetingGetStartedButton"
            style="@style/MaterialButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--suppress AndroidUnknownAttribute -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/greetingTermsAndConditionsCheckBox"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:tag="TAC"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:theme="@style/MyCheckBox"
            android:onCheckedChanged="@{(compoundButton, checked) -> viewmodel.onTermsAndConditionsCheckedChange(checked)}"
            app:layout_constraintBottom_toTopOf="@+id/greetingPrivacyPolicyCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="I agree to the Terms and Conditions" />

        <!--suppress AndroidUnknownAttribute -->
        <com.google.android.material.checkbox.MaterialCheckBox
...
